<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>hmi.flipper2.0</groupId>
	<artifactId>flipper2.0</artifactId>
	<version>0.2</version>
	<packaging>jar</packaging>
	<dependencies>
	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.6.2</version>
            <scope>test</scope>
        </dependency>
	<dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
            <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>2.2</version>
            <scope>test</scope>
        </dependency>
	<dependency>
            <groupId>javax.json</groupId>
            <artifactId>javax.json-api</artifactId>
            <version>1.1.4</version>
	</dependency>
	<dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.json</artifactId>
            <version>1.1.4</version>
	</dependency>
	<dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.2.5</version>
	</dependency>
        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.30</version>
        </dependency>
	</dependencies>
	<profiles>
		<profile>
			<id>jdk11</id>
			<activation>
				<jdk>[11,</jdk>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.graalvm.sdk</groupId>
					<artifactId>graal-sdk</artifactId>
					<version>${graalvm.version}</version>
				</dependency>
				<dependency>
					<groupId>org.graalvm.js</groupId>
					<artifactId>js</artifactId>
					<version>${graalvm.version}</version>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.graalvm.js</groupId>
					<artifactId>js-scriptengine</artifactId>
					<version>${graalvm.version}</version>
				</dependency>
				<dependency>
					<groupId>org.graalvm.tools</groupId>
					<artifactId>profiler</artifactId>
					<version>${graalvm.version}</version>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.graalvm.tools</groupId>
					<artifactId>chromeinspector</artifactId>
					<version>${graalvm.version}</version>
					<scope>runtime</scope>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.22.1</version>
						<configuration>
							<argLine>-XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI --module-path=${compiler.dir} --upgrade-module-path=${compiler.dir}/compiler.jar</argLine>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<version>2.10</version>
						<executions>
							<execution>
								<id>copy</id>
								<phase>process-test-classes</phase>
								<goals>
									<goal>copy</goal>
								</goals>
								<configuration>
									<artifactItems>
										<artifactItem>
											<groupId>org.graalvm.compiler</groupId>
											<artifactId>compiler</artifactId>
											<version>${graalvm.version}</version>
											<type>jar</type>
											<overWrite>true</overWrite>
											<destFileName>compiler.jar</destFileName>
										</artifactItem>
										<artifactItem>
											<groupId>org.graalvm.truffle</groupId>
											<artifactId>truffle-api</artifactId>
											<version>${graalvm.version}</version>
											<type>jar</type>
											<overWrite>true</overWrite>
											<destFileName>truffle-api.jar</destFileName>
										</artifactItem>
										<artifactItem>
											<groupId>org.graalvm.sdk</groupId>
											<artifactId>graal-sdk</artifactId>
											<version>${graalvm.version}</version>
											<type>jar</type>
											<overWrite>true</overWrite>
											<destFileName>graal-sdk.jar</destFileName>
										</artifactItem>
									</artifactItems>
									<outputDirectory>${compiler.dir}</outputDirectory>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.6.0</version>
						<executions>
							<execution>
								<id>default-cli</id>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<arguments>
										<argument>--module-path</argument>
										<!-- automatically creates the modulepath using all project dependencies, also adding the project build directory -->
										<modulepath/>
										<argument>-classpath</argument>
										<!-- automatically creates the classpath using all project dependencies, also adding the project build directory -->
										<classpath/>
										<argument>-XX:+UnlockExperimentalVMOptions</argument>
										<argument>-XX:+EnableJVMCI</argument>
										<argument>--upgrade-module-path=${compiler.dir}/compiler.jar</argument>
										<argument>hmi.flipper2.launcher.FlipperLauncher</argument>
									</arguments>
								</configuration>
							</execution>
							<execution>
								<id>nograal</id>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<arguments>
										<argument>--module-path</argument>
										<!-- automatically creates the modulepath using all project dependencies, also adding the project build directory -->
										<modulepath/>
										<argument>-classpath</argument>
										<!-- automatically creates the classpath using all project dependencies, also adding the project build directory -->
										<classpath/>
										<argument>hmi.flipper2.launcher.FlipperLauncher</argument>
									</arguments>
								</configuration>
							</execution>
						</executions>
						<configuration>
							<executable>${JAVA_HOME}/bin/java</executable>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>jdk8</id>
			<activation>
				<jdk>1.8</jdk>
				<file>
					<missing>${java.home}/lib/truffle/truffle-api.jar</missing>
				</file>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.graalvm.sdk</groupId>
					<artifactId>graal-sdk</artifactId>
					<version>${graalvm.version}</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>org.graalvm.js</groupId>
					<artifactId>js</artifactId>
					<version>${graalvm.version}</version>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.graalvm.js</groupId>
					<artifactId>js-scriptengine</artifactId>
					<version>${graalvm.version}</version>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.graalvm.tools</groupId>
					<artifactId>profiler</artifactId>
					<version>${graalvm.version}</version>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.graalvm.tools</groupId>
					<artifactId>chromeinspector</artifactId>
					<version>${graalvm.version}</version>
					<scope>runtime</scope>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.6.0</version>
						<executions>
							<execution>
								<id>default-cli</id>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<arguments>
										<argument>-classpath</argument>
										<classpath/>
										<argument>hmi.flipper2.launcher.FlipperLauncher</argument>
									</arguments>
								</configuration>
							</execution>
						</executions>
						<configuration>
							<executable>${JAVA_HOME}/bin/java</executable>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<executions>
					<execution>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<arguments>
								<argument>--module-path</argument>
								<!-- automatically creates the modulepath using all project dependencies, also adding the project build directory -->
								<modulepath/>
								<argument>-classpath</argument>
								<!-- automatically creates the classpath using all project dependencies, also adding the project build directory -->
								<classpath/>
							</arguments>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<executable>${JAVA_HOME}/bin/java</executable>
					<arguments>
						<argument>-classpath</argument>
						<!-- automatically creates the classpath using all project dependencies, also adding the project build directory -->
						<classpath/>
						<argument>com.mycompany.app.App</argument>
					</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<graalvm.version>20.0.0</graalvm.version>
		<compiler.dir>${project.build.directory}/compiler</compiler.dir>
	</properties>
</project>
